<resources>
    <string name="app_name">Android Threading</string>
    <string name="weight">Subprocess weight:</string>
    <string name="weight_hint">Subprocess weight</string>
    <string name="run_on_main">Run on main thread</string>
    <string name="run">Run</string>
    <string name="result">Calculated Result: %d</string>
    <string name="to_login">Go to simulated login</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="username_hint">User name</string>
    <string name="password_hint">Password</string>
    <string name="login_condition">*Any username/password combination will be approved</string>
    <string name="login">Login</string>
    <string name="loading">Loading…</string>
    <string name="login_was">Login was: %s.</string>
    <string name="empty"> </string>
    <string name="generate_broadcast">Generate Broadcast</string>
    <string name="work_manager">Work Manager</string>


    <string name="do_work">Do work</string>
    <string name="do_periodic_work">Do periodic work</string>
    <string name="do_unique_work">Do unique work</string>
    <string name="cancel_periodic_work">Cancel periodic work</string>
    <string name="do_progress_work">Do progress work</string>
    <string name="progress_is">Progress is: %d</string>
    <string name="work_result">Work will log to console on completion</string>
</resources>