<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".worker.WorkerActivity">

    <Button
        android:id="@+id/doWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/do_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/workResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/work_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/doPeriodicWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/do_periodic_work"
        app:layout_constraintEnd_toEndOf="@+id/doWork"
        app:layout_constraintStart_toStartOf="@+id/doWork"
        app:layout_constraintTop_toBottomOf="@+id/doWork" />

    <Button
        android:id="@+id/doUniqueWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/do_unique_work"
        app:layout_constraintEnd_toEndOf="@+id/doPeriodicWork"
        app:layout_constraintStart_toStartOf="@+id/doPeriodicWork"
        app:layout_constraintTop_toBottomOf="@+id/doPeriodicWork" />

    <Button
        android:id="@+id/cancelPeriodicWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_periodic_work"
        app:layout_constraintEnd_toEndOf="@+id/doUniqueWork"
        app:layout_constraintStart_toStartOf="@+id/doUniqueWork"
        app:layout_constraintTop_toBottomOf="@+id/doUniqueWork" />

    <Button
        android:id="@+id/doProgressWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/do_progress_work"
        app:layout_constraintEnd_toEndOf="@+id/cancelPeriodicWork"
        app:layout_constraintStart_toStartOf="@+id/cancelPeriodicWork"
        app:layout_constraintTop_toBottomOf="@+id/cancelPeriodicWork" />
</androidx.constraintlayout.widget.ConstraintLayout>